# autograder-test

./: run_autograder  test.sh  testscript
autograder/: __init__.py
awk/: children.awk  end_time.awk  exitstatus.awk  start_time.awk  status.awk  termsig.awk  tracee_pid.awk  tracer_pid.awk
extra/: bigshell.makefile
util/: Makefile.in  configure.ac  configure~  makefile
util/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.2  traces.3
util/src/: Makefile.am  Makefile.in  check_signal_disposition.c  signum.c  signum.h  test_exit_status.c  test_term_sig.c  tracer.c  trunc_stream.c  wait_for_signal.c
