bin_PROGRAMS = check_signal_disposition test_exit_status test_term_sig tracer trunc_stream wait_for_signal

check_signal_disposition_SOURCES = check_signal_disposition.c signum.c
test_exit_status_SOURCES = test_exit_status.c signum.c
test_term_sig_SOURCES = test_term_sig.c signum.c
tracer_SOURCES = tracer.c signum.c
trunc_stream_SOURCES = trunc_stream.c signum.c
wait_for_signal_SOURCES = wait_for_signal.c signum.c
